[project]
name = "approxbayescomp"
version = "0.2.1"
description = "Approximate Bayesian Computation for actuaries"
readme = "README.md"
#homepage = "https://github.com/Pat-Laub/approxbayescomp"
license = { text = "MIT" }
authors = [
    { name = "Patrick Laub", email = "patrick.laub@gmail.com" },
    { name = "Pierre-Olivier Goffard" }
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Science/Research"
]
#packages = ["approxbayescomp"]
#include-package-data = true
dependencies = [
    "joblib",
    "numba",
    "numpy",
    "scipy",
    "tqdm",
    "matplotlib",
    "hilbertcurve"
]

[project.optional-dependencies]
dev = ["black", "build", "flake8", "pandas", "pre-commit", "pytest", "twine"]
docs = ["ipywidgets", "mike", "mkdocs",  "mkdocs-jupyter", "mkdocs-macros-plugin", "mkdocs-material", "pymc", "seaborn"]

[build-system]
requires = ["setuptools", "wheel"]
